<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.moviesproject.presentation.movie_details.MovieDetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_black">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/viewGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

            <ImageView
                android:id="@+id/posterImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="3:2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription"
                tools:srcCompat="@drawable/orig" />

            <ImageView
                android:id="@+id/imageGradient"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/mask"
                app:layout_constraintBottom_toBottomOf="@+id/posterImage"
                app:layout_constraintEnd_toEndOf="@+id/posterImage"
                app:layout_constraintStart_toStartOf="@id/posterImage"
                app:layout_constraintTop_toTopOf="@id/posterImage"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/movieTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:textColor="@color/movie_title_white"
                android:textSize="@dimen/movie_title_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline_half"
                app:layout_constraintStart_toEndOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/posterImage"
                tools:text="@string/avengers_end_game" />


            <TextView
                android:id="@+id/numTag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/movieTitle"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                tools:text="@string/tag" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_half"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="202dp" />

            <TextView
                android:id="@+id/tags"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/tag_color_red"
                app:layout_constraintEnd_toStartOf="@+id/guideline_half"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/movieTitle"
                tools:text="@string/tags" />

            <TextView
                android:id="@+id/reviews"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textColor="@color/review_gray"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/guideline_half"
                app:layout_constraintTop_toBottomOf="@id/after_tags"
                tools:text="@string/reviews_number" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/after_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="tags" />

            <TextView
                android:id="@+id/overView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="4dp"
                android:textAlignment="textStart"
                android:textColor="@color/white_gray"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/storyline"
                tools:text="@string/storyline_value" />

            <TextView
                android:id="@+id/storyline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/storyline"
                android:textColor="@color/movie_title_white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/reviews" />

            <TextView
                android:id="@+id/cast"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/cast"
                android:textColor="@color/movie_title_white"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/overView" />

            <ImageView
                android:id="@+id/star1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/reviews"
                app:layout_constraintEnd_toStartOf="@+id/star2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/tags"
                app:srcCompat="@drawable/ic_star_icon"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/star2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/reviews"
                app:layout_constraintEnd_toStartOf="@+id/star3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/star1"
                app:layout_constraintTop_toBottomOf="@+id/tags"
                app:srcCompat="@drawable/ic_star_icon"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/star3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/reviews"
                app:layout_constraintEnd_toStartOf="@+id/star4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/star2"
                app:layout_constraintTop_toBottomOf="@+id/tags"
                app:srcCompat="@drawable/ic_star_icon"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/star4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/reviews"
                app:layout_constraintEnd_toStartOf="@+id/star5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/star3"
                app:layout_constraintTop_toBottomOf="@+id/tags"
                app:srcCompat="@drawable/ic_star_icon"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/star5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/reviews"
                app:layout_constraintEnd_toStartOf="@+id/reviews"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/star4"
                app:layout_constraintTop_toBottomOf="@+id/tags"
                app:srcCompat="@drawable/ic_star_icon"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/backArrowDetails"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/backArrow"
                app:layout_constraintStart_toEndOf="@id/guideline_start"
                app:layout_constraintTop_toTopOf="@id/guid_back_arrow"
                app:srcCompat="@drawable/ic_back_arrow"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/backArrow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="56dp"
                android:background="@color/transparent"
                android:text="@string/back_arrow"
                android:textColor="@color/gray_gray"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guid_back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="56dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerActor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/cast" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>