<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:background="@drawable/square_fragment"
    android:layout_marginBottom="16dp">


    <ImageView
        android:id="@+id/avengers_icon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:adjustViewBounds="true"
        app:layout_constraintDimensionRatio="1:1.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/movie_avengers_icon_fragment">

    </ImageView>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_mask__1_"
        app:layout_constraintBottom_toBottomOf="@+id/avengers_icon"
        app:layout_constraintEnd_toEndOf="@+id/avengers_icon"
        app:layout_constraintStart_toStartOf="@+id/avengers_icon"
        app:layout_constraintTop_toTopOf="@+id/avengers_icon" />


    <TextView
        android:id="@+id/fragment_tags"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="2dp"
        android:text="@string/tags"
        android:textColor="@color/tag_color_red"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="@id/avengers_icon"
        app:layout_constraintStart_toStartOf="@id/guideline_frag_start"
        app:layout_constraintBottom_toTopOf="@id/fragment_review">

    </TextView>

    <ImageView
        android:id="@+id/fragment_star1"
        android:layout_width="0dp"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_star_icon"
        app:layout_constraintStart_toStartOf="@id/guideline_frag_start"
        app:layout_constraintBottom_toBottomOf="@id/avengers_icon">

    </ImageView>

    <ImageView
        android:id="@+id/fragment_star2"
        android:layout_width="0dp"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_star_icon"
        app:layout_constraintStart_toEndOf="@id/fragment_star1"
        app:layout_constraintBottom_toBottomOf="@id/avengers_icon">

    </ImageView>

    <ImageView
        android:id="@+id/fragment_star3"
        android:layout_width="0dp"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_star_icon"
        app:layout_constraintStart_toEndOf="@id/fragment_star2"
        app:layout_constraintBottom_toBottomOf="@id/avengers_icon">

    </ImageView>

    <ImageView
        android:id="@+id/fragment_star4"
        android:layout_width="0dp"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_star_icon"
        app:layout_constraintStart_toEndOf="@id/fragment_star3"
        app:layout_constraintBottom_toBottomOf="@id/avengers_icon">

    </ImageView>

    <ImageView
        android:id="@+id/fragment_star5"
        android:layout_width="0dp"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="112dp"
        android:src="@drawable/ic_star_icon"
        app:layout_constraintStart_toEndOf="@id/fragment_star4"
        app:layout_constraintBottom_toBottomOf="@id/avengers_icon">

    </ImageView>

    <TextView
        android:id="@+id/fragment_review"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/reviews_number"
        android:textColor="@color/review_gray"
        android:layout_marginTop="4dp"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/avengers_icon"
        app:layout_constraintStart_toEndOf="@id/fragment_star5"
        app:layout_constraintBottom_toBottomOf="@id/avengers_icon"/>


    <TextView
        android:id="@+id/avengers_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/avengers_end_game"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/avengers_icon"
        app:layout_constraintStart_toStartOf="@id/guideline_frag_start"
        app:layout_constraintTop_toBottomOf="@+id/avengers_icon" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_frag_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="6dp" />

    <TextView
        android:id="@+id/movie_duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/film_timer"
        android:textColor="@color/film_time"
        android:textSize="8dp"
        app:layout_constraintStart_toStartOf="@id/guideline_frag_start"
        app:layout_constraintTop_toBottomOf="@+id/avengers_title"
        app:layout_constraintEnd_toEndOf="@id/avengers_icon"/>

</androidx.constraintlayout.widget.ConstraintLayout>